--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
-	<servlet-name>Test</servlet-name>
-	<servlet-class>sppp.control.Test</servlet-class>
-
-	<description>Ma première servlet de test.</description>
-        
-	<load-on-startup>1</load-on-startup>
-</servlet>
+        <servlet-name>Home</servlet-name>
+        <servlet-class>sppp.control.Home</servlet-class>
+        <description>Ma servlet d'acceuil.</description>
+    </servlet>
+    <servlet>
+        <servlet-name>Main</servlet-name>
+        <servlet-class>sppp.control.Main</servlet-class>
+    </servlet>
     <servlet-mapping>
-        <servlet-name>Test</servlet-name>
-        <url-pattern>/Test</url-pattern>
+        <servlet-name>Home</servlet-name>
+        <url-pattern>/Home</url-pattern>
         <load-on-startup>1</load-on-startup>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Main</servlet-name>
+        <url-pattern>/Main</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>5</session-timeout>
